--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="css/bootstrap.css">
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/header-footer-new.css">
 
     <!-- google fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -25,53 +26,10 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.3/font/bootstrap-icons.css">
 </head>
 <body>
-    <!-- header for non registered members -->
-    <!-- <header class="container-fluid">
-        <nav class="navbar navbar-light navbar-expand-lg">
-            <div class="container-fluid px-2 px-lg-5">
-              <a class="navbar-brand text-dark" style="font-weight: 600; font-size: 35px;" href="#">Dispoze</a>
-              <button class="navbar-toggler border-0" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-              </button>
-              <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-                  <li class="nav-item me-4">
-                    <a class="text-decoration-none text-dark d-lg-none" style="font-weight: 400; font-size: 18px;" href="#">MENU</a>
-                  </li>
-                  <li class="nav-item me-5">
-                    <a class="nav-link nv-link active link-dark" style="font-weight: 400; font-size: 20px;" aria-current="page" href="#"><img src="img/home.png" alt="icon" class="me-3 d-lg-none">Home</a>
-                  </li>
-                  <li class="nav-item me-5">
-                    <a class="nav-link nv-link link-dark" style="font-weight: 400; font-size: 20px;" href="shop.html"><img src="img/shop.png" alt="icon" class="me-3 d-lg-none">Shop</a>
-                  </li>
-                  <li class="nav-item me-5">
-                    <a class="nav-link nv-link link-dark" style="font-weight: 400; font-size: 20px;" href="#"> <img src="img/people.png" alt="icon" class="me-3 d-lg-none">About Us</a>
-                  </li>
-                  <li class="nav-item me-5">
-                    <a class="nav-link nv-link link-dark" style="font-weight: 400; font-size: 20px;" href="#"><img src="img/messages-3.png" alt="icon" class="me-3 d-lg-none">Contact Us</a>
-                  </li>
-                  <li class="d-none">
-                    <a class="nav-link disabled">Disabled</a>
-                  </li>
-                </ul>
-                <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-                    <li class="nav-item">
-                      <a class="nav-link nv-link me-lg-5" style="font-weight: 400; font-size: 20px; color:  #17A200;" href="#"><img src="img/login.png" alt="icon" class="me-3 d-lg-none">Login</a>
-                    </li>
-                    <li class="nav-item">
-                      <a class="nav-link nv-lin text-white rounded px-lg-4 py-2 me-lg-3" id="sign-up" style="font-weight: 400; font-size: 20px; background-color:  #17A200;" href="#"><img src="img/user-add.png" alt="icon" class="me-3 d-lg-none">Sign Up</a>
-                    </li>
-                  </ul>
-              </div>
-            </div>
-        </nav>
-    </header> -->
 
-
-     <!-- header for non registered members -->
-     <header class="container-fluid">
+    <header>
         <nav class="navbar navbar-light navbar-expand-lg">
-            <div class="container-fluid px-2 px-lg-5">
+            <div class="container">
               <a class="navbar-brand text-dark" style="font-weight: 600; font-size: 30px;" href="#">Dispoze</a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -82,27 +40,24 @@
                     <a class="text-decoration-none text-dark d-lg-none" style="font-weight: 400; font-size: 18px;" href="#">MENU</a>
                   </li>
                   <li class="nav-item me-3">
-                    <a class="nav-link link-dark" style="font-weight: 400; font-size: 18px;" aria-current="page" href="#"><img src="img/home.png" alt="icon" class="me-4 d-lg-none">Home</a>
+                    <a class="nav-link link-dark" style="font-weight: 400; font-size: 18px;" aria-current="page" href="index.html"><img src="img/home.png" alt="icon" class="me-4 d-lg-none">Home</a>
                   </li>
                   <li class="nav-item me-3">
-                    <a class="nav-link link-dark" style="font-weight: 400; font-size: 18px;" href="shop.html"><img src="img/shop.png" alt="icon" class="me-4 d-lg-none">Shop</a>
+                    <a class="nav-link link-dark" style="font-weight: 400; font-size: 18px;" href="login.html"><img src="img/shop.png" alt="icon" class="me-4 d-lg-none">Shop</a>
                   </li>
                   <li class="nav-item me-3">
-                    <a class="nav-link link-dark" style="font-weight: 400; font-size: 18px;" href="#"> <img src="img/people.png" alt="icon" class="me-4 d-lg-none">About US</a>
+                    <a class="nav-link link-dark" style="font-weight: 400; font-size: 18px;" href="about-us.html"> <img src="img/people.png" alt="icon" class="me-4 d-lg-none">About US</a>
                   </li>
                   <li class="nav-item me-3">
-                    <a class="nav-link link-dark" style="font-weight: 400; font-size: 18px;" href="#"><img src="img/messages-3.png" alt="icon" class="me-4 d-lg-none">Contact Us</a>
-                  </li>
-                  <li class="d-none">
-                    <a class="nav-link disabled">Disabled</a>
+                    <a class="nav-link link-dark" style="font-weight: 400; font-size: 18px;" href="#footer"><img src="img/messages-3.png" alt="icon" class="me-4 d-lg-none">Contact Us</a>
                   </li>
                 </ul>
                 <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                      <a class="nav-link me-lg-3" style="font-weight: 400; font-size: 18px; color:  #17A200;" href="#"><img src="img/login.png" alt="icon" class="me-4 d-lg-none">Login</a>
+                      <a class="nav-link me-lg-3" style="font-weight: 400; font-size: 18px; color:  #17A200;" href="login.html"><img src="img/login.png" alt="icon" class="me-4 d-lg-none">Login</a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link text-white rounded px-lg-3 py-1" id="sign-up" style="font-weight: 400; font-size: 18px; background-color:  #17A200;" href="#"><img src="img/user-add.png" alt="icon" class="me-4 d-lg-none">Signup</a>
+                      <a class="nav-link text-white rounded px-lg-3 py-1" id="sign-up" style="font-weight: 400; font-size: 18px; background-color:  #17A200;" href="signup.html"><img src="img/user-add.png" alt="icon" class="me-4 d-lg-none">Signup</a>
                     </li>
                   </ul>
               </div>
