--- a/index.html
+++ b/index.html
@@ -40,16 +40,16 @@
                     <a class="text-decoration-none text-dark d-lg-none" style="font-weight: 400; font-size: 18px;" href="#">MENU</a>
                   </li>
                   <li class="nav-item me-3">
-                    <a class="nav-link link-dark" style="font-weight: 400; font-size: 18px;" aria-current="page" href="index.html"><img src="img/home.png" alt="icon" class="me-4 d-lg-none">Home</a>
+                    <a class="nav-link link-dark text-dark" style="font-weight: 400; font-size: 18px;" aria-current="page" href="index.html"><img src="img/home.png" alt="icon" class="me-4 d-lg-none">Home</a>
                   </li>
                   <li class="nav-item me-3">
-                    <a class="nav-link link-dark" style="font-weight: 400; font-size: 18px;" href="login.html"><img src="img/shop.png" alt="icon" class="me-4 d-lg-none">Shop</a>
+                    <a class="nav-link link-dark text-dark" style="font-weight: 400; font-size: 18px;" href="login.html"><img src="img/shop.png" alt="icon" class="me-4 d-lg-none">Shop</a>
                   </li>
                   <li class="nav-item me-3">
-                    <a class="nav-link link-dark" style="font-weight: 400; font-size: 18px;" href="about-us.html"> <img src="img/people.png" alt="icon" class="me-4 d-lg-none">About US</a>
+                    <a class="nav-link link-dark text-dark" style="font-weight: 400; font-size: 18px;" href="about-us.html"> <img src="img/people.png" alt="icon" class="me-4 d-lg-none">About US</a>
                   </li>
                   <li class="nav-item me-3">
-                    <a class="nav-link link-dark" style="font-weight: 400; font-size: 18px;" href="#footer"><img src="img/messages-3.png" alt="icon" class="me-4 d-lg-none">Contact Us</a>
+                    <a class="nav-link link-dark text-dark" style="font-weight: 400; font-size: 18px;" href="#footer"><img src="img/messages-3.png" alt="icon" class="me-4 d-lg-none">Contact Us</a>
                   </li>
                 </ul>
                 <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
