--- a/index.html
+++ b/index.html
@@ -77,12 +77,12 @@
                     <div class="login-form mx-auto">
                         <form action="" class="">
                             <div class="mb-5">
-                                <label for="exampleInputEmail1" class="form-label ms-2">Email*</label>
+                                <label for="exampleInputEmail1" class="form-label ms-2">Email<span class="text-danger">*</span></label>
                                 <input type="email" class="form-control p-3 border border-dark" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="example@domain.com" required onkeyup="isFilled()">
                                 <!-- <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div> -->
                             </div>
                             <div class="mb-2">
-                                <label for="exampleInputPassword1" class="form-label ms-2">Password*</label>
+                                <label for="exampleInputPassword1" class="form-label ms-2">Password<span class="text-danger">*</span></label>
 
 
                                 <div class="position-relative">
@@ -132,10 +132,22 @@
                         <p class="mx-5" style="height: 5px;">Or continue with</p>
                         <img src="img/Line 26.png" alt="" class="img-fluid" style="height: 1px;">
                     </div> -->
-                    <div class="d-flex justify-content-center">
+                    <!-- <div class="d-flex justify-content-center mb-4">
                         <img src="img/Google - jpeg 0.png" alt="" class="img-fluid">
                         <img src="img/Facebook - jpeg 0.png" alt="" class="img-fluid mx-4">
                         <img src="img/Apple - png 0.png" alt="" class="img-fluid">
+                    </div> -->
+                    <div class="d-flex justify-content-center align-items-center">
+                        <!-- <div class="border border-dark d-inline" > -->
+                            <!-- <img src="img/google_app_icon.png" alt="" class="img-fluid" style="width: 4%;"> -->
+                            <img src="img/Google - jpeg 0.png" alt="" class="img-fluid">
+                        <!-- </div> -->
+                        <div>
+                            <i class="bi bi-facebook border-0 text-primary display-5 mx-4"></i>
+                        </div>
+                        <div>
+                            <i class="bi bi-apple  border border-dark rounded-circle fs-3" style="padding: 8px 11px;"></i>
+                        </div>
                     </div>
                 </div>
             </div>
